tests/snapshots/snapshot_tests__array_init_pair_symmetr3.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_pair_symmetr3.vmt",
    status: Timeout,
    used_instantiations: [],
}
