tests/snapshots/snapshot_tests__array_init_pair_symmetr3.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_pair_symmetr3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b_next Z x) Z) x)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int b_next Z x) Z) (Read-Int-Int b_next Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z N) Z) (Read-Int-Int Array-Int-Int!val!2 Z))",
    ],
}
