tests/snapshots/snapshot_tests__array_init_reverse_mult.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_reverse_mult.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z Z) Z) (Read-Int-Int Array-Int-Int!val!1 Z))",
    ],
}
